k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entities-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entities
  template:
    metadata:
      labels:
        app: entities
    spec:
      containers:
        - name: fastapi
          image: afurmenkov/entities:latest
          ports:
            - containerPort: 8000
