k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: entities-service
spec:
  type: ClusterIP
  selector:
    app: entities
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
