k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: ClusterIP
  selector:
    app: entities
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
